# Degree-Grade

./: CMakeLists.txt  README.md  grades.txt  main.cpp
Source/: Course.cpp  Semester.cpp  Student.cpp
include/: Course.hpp  Semester.hpp  Student.hpp
